# pico-tiny-c-template

./: .editorconfig  CMakeLists.txt  README.md
src/: pico-tiny.c
